# deep-learning-from-scratch

./: .gitignore  pyproject.toml
deep_learning_from_scratch/ch02/: perceptron.py
deep_learning_from_scratch/ch03/: 3layer_neuralnet.py  mnist_show.py  neuralnet_mnist.py  neuralnet_mnist_batch.py  sigmoid.py  softmax.py  step_function.py
deep_learning_from_scratch/ch04/: cross_entropy_error.py  t.py
deep_learning_from_scratch/dataset/: mnist.py
tests/: test_perceptron.py
