[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
